# ecommerce-drf-api

./: .dockerignore  .gitignore  Dockerfile  debug.py  pyproject.toml  requirements.txt  teste.txt
apps/: __init__.py
apps/order/: models.py
apps/order/migrations/: 0001_initial.py
apps/orders/: admin.py  urls.py
apps/orders/migrations/: 0001_initial.py  0002_initial.py
apps/orders/models/: __init__.py  order.py  order_itens.py
apps/orders/views/: order.py  payment.py
apps/product/: admin.py  models.py  urls.py
apps/product/migrations/: 0001_initial.py  0002_variation.py  0003_alter_product_slug.py  0004_pricetype_productprice.py
apps/product/models/: __init__.py  prices.py
apps/product/views/: checkout.py
apps/products/: admin.py  models.py  urls.py
apps/products/migrations/: 0001_initial.py
apps/products/models/: __init__.py  price.py  product.py
apps/products/templatetags/: omfilters.py
apps/products/views/: __init__.py  cart.py  checkout.py  product.py
apps/stock/: models.py
apps/stock/models/: __init__.py  inventory.py  warehouse.py
apps/user_profile/: admin.py  models.py
apps/users/: admin.py  apps.py  auth.py  models.py  selectors.py  serializers.py  services.py  urls.py
apps/utils/: __init__.py  api_exception_handler.py  cpf_validator.py  data_parser.py  datetime_utils.py  exceptions.py  load_query.py  permissions.py  resize_image.py  template_filters.py
core/: middleware.py  settings.py  urls.py
project/: settings.py  urls.py
templates/: base.html
templates/partials/: _footer.html  _head.html
(+37 files in other folders)
